refactor: remove sonar issues